# TableauTCTL

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
benchmark_result_20260301_114534/: curves_bounds_M.csv  curves_clocks.csv  curves_depth.csv  curves_obligations.csv  curves_until_release_mixed.csv  curves_zeno.csv  reproducibility.txt
benchmark_result_20260301_121613/: curves_alternation.csv  curves_bounds_M.csv  curves_chain.csv  curves_clocks.csv  curves_depth.csv  curves_obligations.csv  curves_until_release_mixed.csv  curves_zeno.csv  reproducibility.txt
examples/: tctl_examples.txt  test.txt  tot.txt
include/tctl/: ast.hpp  benchmark.hpp  cli.hpp  lexer.hpp  normalization.hpp  parser.hpp  tableau.hpp  test.hpp  timed_automaton.hpp  utils.hpp  z3_solver.hpp  zone.hpp
src/: ast.cpp  benchmark.cpp  cli.cpp  lexer.cpp  main.cpp  normalization.cpp  parser.cpp  tableau.cpp  test.cpp  timed_automaton.cpp  utils.cpp  z3_solver.cpp  zone.cpp
test_result_20260224_175113/: comprehensive_200.csv  propositional_100.csv  stress_200.csv  tctl_coverage.csv  tctl_edge_100.csv
